# smartsetter-python-utils

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml  setup.cfg
.devcontainer/: .postgres  Dockerfile  devcontainer.json  docker-compose.yml
requirements/: requirements-dev.txt  requirements.txt
smartsetter_utils/: aws_utils.py  core.py  db_fields.py  django_settings.py  elasticsearch.py  geo_utils.py  testing.py  twilio_utils.py
smartsetter_utils/airtable/: apps.py  models.py  tasks.py  utils.py  views.py
smartsetter_utils/airtable/migrations/: 0001_initial.py
smartsetter_utils/airtable/tests/: test_airtable_webhook_api.py
smartsetter_utils/hubspot/: utils.py  views.py
smartsetter_utils/ssot/: admin.py  apps.py  data.py  fields.py  models.py  realtyna.py  tasks.py  utils.py
smartsetter_utils/ssot/migrations/: 0001_initial.py  0002_agent_job_title.py  0003_zipcode.py  0004_agent_source_office_source_transaction_source_and_more.py  0005_agent_status_office_location_office_status_and_more.py  0006_alter_agent_address_alter_agent_city_and_more.py  0007_agent_raw_data_office_raw_data_transaction_raw_data.py  0008_alter_agent_city_alter_agent_email_and_more.py  0009_alter_agent_email_alter_agent_job_title_and_more.py  0010_remove_transaction_raw_data.py  0011_mls_company_hubspot_internal_value_and_more.py  0012_agentofficethrough_agent_office_history.py  0013_transaction_lease_price_transaction_property_type_and_more.py  0014_transaction_listing_contract_date_and_more.py  0015_agent_tenure.py  0015_agent_tenure_agent_tenure_end_date_and_more.py  (+16 more)
(+27 files in other folders)
